bk_ida/gccida/g2/cse_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5247:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5248:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5269:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5347:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v136; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5414:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v203; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5443:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v232; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5459:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v248; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v262; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5495:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v284; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5500:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v289; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5511:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5511:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5512:4: error: expected ';' after expression
rtx v301; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5512:5: error: use of undeclared identifier 'v301'
rtx v301; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5521:4: error: expected ';' after expression
rtx v310; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5521:5: error: use of undeclared identifier 'v310'
rtx v310; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5523:4: error: expected ';' after expression
rtx v312; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5523:5: error: use of undeclared identifier 'v312'
rtx v312; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/cse.c:5528:4: error: expected ';' after expression
rtx v317; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cse_insn/src/obj/cse.o] Error 1
